Fixed issue with card appeaing behind the device

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -43,7 +43,7 @@ body {
     60% { transform: translateY(-15px); }
   }
 
-  #enterar {
+  #viewCardButton {
     background-color: #ff7f50;
     color: #fff;
     border: none;
@@ -55,7 +55,7 @@ body {
     transition: background-color 0.3s ease;
   }
 
-  #enterar:enabled {
+  #viewCardButton:enabled {
     cursor: pointer;
     background-color: #ff4500;
   }
@@ -89,4 +89,15 @@ body {
       padding: 10px 20px;
     }
     #footer { font-size: 0.8rem; }
+
+    .modal-dialog-centered {
+        display: flex;
+        align-items: center;
+        min-height: calc(100% - 1rem);
+      }
+      @media (min-width: 576px) {
+        .modal-dialog-centered {
+          min-height: calc(100% - 3.5rem);
+        }
+      }
   }
